--- a/App/View/basic/basic.banner.html
+++ b/App/View/basic/basic.banner.html
@@ -15,7 +15,7 @@
     <input type="hidden" name="id" value="<?=$id?>" />
     <input type="hidden" name="pic" class="bzpic" value="<?=$info['pic']?>" />
     <div class="bzform">
-        <img id="bzpic" src="<?=$info['pic']?>" onerror="this.src='/Static/1.2/images/u143.png'" class="info-pic" >
+        <img id="bzpic" class="info-pic" onerror="this.src='/Static/1.2/images/u143.png'" src="<?=$info['pic']?$info['pic']:'error'?>" >
         <input type="hidden" name="size" value="500" style="display: none;"/>
         <input type="file" id="bzfile" name="fileName" style="display: inline-block;"/>
     </div> 
