--- a/App/View/basic/basic.class.html
+++ b/App/View/basic/basic.class.html
@@ -16,7 +16,7 @@
     <input type="hidden" name="pic" class="bzpic" value="<?=$info['pic']?>" />
     <input type="hidden" name="class" id="allClass" value="<?=$info['desc']?>" />
     <div class="bzform">
-        <img id="bzpic" src="<?=$info['pic']?>" onerror="this.src='/Static/1.2/images/u143.png'" class="info-pic" >
+        <img id="bzpic" src="<?=$info['pic']?$info['pic']:'error'?>" onerror="this.src='/Static/1.2/images/u143.png'" class="info-pic" >
         <input type="hidden" name="size" value="500" style="display: none;"/>
         <input type="file" id="bzfile" name="fileName" style="display: inline-block;"/>
     </div> 
