修正部分bug，优化图片修改，可直接点击图片进行修改。
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7941 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/channel/channel.index.html
+++ b/App/View/channel/channel.index.html
@@ -216,7 +216,7 @@
                 });
             }, 
             function(index){
-                window.location.reload();
+                window.location.href=window.location.href;
             });
         });
 
