--- a/App/View/basic/basic.banner.html
+++ b/App/View/basic/basic.banner.html
@@ -15,9 +15,9 @@
     <input type="hidden" name="id" value="<?=$id?>" />
     <input type="hidden" name="pic" class="bzpic" value="<?=$info['pic']?>" />
     <div class="bzform">
-        <img id="bzpic" class="info-pic" onerror="this.src='/Static/1.2/images/u143.png'" src="<?=$info['pic']?$info['pic']:'error'?>" >
+        <img id="bzpic" class="info-pic" onerror="this.src='/Static/1.2/images/u143.png'" onclick="bzfile.click();" title="点击修改" src="<?=$info['pic']?$info['pic']:'error'?>" >
         <input type="hidden" name="size" value="500" style="display: none;"/>
-        <input type="file" id="bzfile" name="fileName" style="display: inline-block;"/>
+        <input type="file" id="bzfile" name="fileName" style="display: none;"/>
     </div> 
     
     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
