--- a/App/View/channel/channel.ad.html
+++ b/App/View/channel/channel.ad.html
@@ -16,9 +16,9 @@
     <input type="hidden" name="cId" value="<?=$cId?>" />
     <input type="hidden" name="pic" class="bzpic" value="<?=$info['pic']?>" />
     <div class="bzform">
-        <img id="bzpic" src="<?=$info['pic']?>" onerror="this.src='/Static/1.2/images/u143.png'" class="info-pic" >
+        <img id="bzpic" src="<?=$info['pic']?>" onclick="bzfile.click();" title="点击修改" onerror="this.src='/Static/1.2/images/u143.png'" class="info-pic" >
         <input type="hidden" name="size" value="500" style="display: none;"/>
-        <input type="file" id="bzfile" name="fileName" style="display: inline-block;"/>
+        <input type="file" id="bzfile" name="fileName" style="display: none;"/>
     </div> 
     
     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
