--- a/App/View/channel/channel.banner.html
+++ b/App/View/channel/channel.banner.html
@@ -15,9 +15,9 @@
     <input type="hidden" name="id" value="<?=$info['id']?>" />
     <input type="hidden" name="banner" class="bzpic" value="<?=$info['banner']?>" />
     <div class="bzform">
-        <img id="bzpic" src="<?=$info['banner']?>" onerror="this.src='/Static/1.2/images/ztbanner.png'" class="info-pic" >
+        <img id="bzpic" src="<?=$info['banner']?>" onclick="bzfile.click();" title="点击修改" onerror="this.src='/Static/1.2/images/ztbanner.png'" class="info-pic" >
         <input type="hidden" name="size" value="200" style="display: none;"/>
-        <input type="file" id="bzfile" name="fileName" style="display: inline-block;"/>
+        <input type="file" id="bzfile" name="fileName" style="display: none;"/>
     </div>
     
     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
