--- a/App/View/module/module.classes.html
+++ b/App/View/module/module.classes.html
@@ -18,8 +18,8 @@
 	</div>
 	<br>
 	<form id="moduleclass" >
-	<input type="hidden" name="moduleId" value="<?=$moduleId?>">
-    <input type="hidden" name="id" id="id" value="<?=$id?>">
+	<input type="hidden" name="moduleId" class="h_modulId" value="<?=$moduleId?>">
+    <input type="hidden" name="id" id="id" class="h_id" value="<?=$id?>">
 	<ul class="confit-list borderBtmCd">
 		<li>
 			<label>
@@ -35,15 +35,17 @@
 			<td width="40%">操作</td>
 		</tr>
 		<?foreach ($classesItem['rows'] as $ky => $vl) { ?>
-		<input type='hidden' value='<?=$vl['number']?>===<?=$vl['name']?>' name='numbers[]' id="item-<?=$ky?>" >
-		<tr id="ClassItem-<?=$ky?>" class="ClassItem">
+		<tr id="ClassItem-<?=$vl['id']?>" class="ClassItem">
 			<td class="ClassItemName" ><?=$vl['name']?></td>
 			<td class="ClassItemNumber" ><?=$vl['number']?></td>
 			<td>
-				<a href="javascript:void(0);" onclick="delClassItem(<?=$ky?>)">删除</a>
-				<a href="javascript:void(0);" onclick="editClassItem(<?=$vl['number']?>,<?=$ky?>);">编辑</a>	&nbsp;&nbsp;|&nbsp;&nbsp;
-				<span onclick="orderBasic(<?=$v['id']?>, 1, 3)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
-				<span class="img-flip" onclick="orderBasic(<?=$v['id']?>, 2, 3)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>	
+				<input type='hidden' value='<?=$vl['number']?>===<?=$vl['name']?>' name='numbers[]' id="item-<?=$vl['id']?>" >
+				<a href="javascript:void(0);" onclick="delClassItem(<?=$vl['id']?>)">删除</a>
+				<a href="javascript:void(0);" onclick="editClassItem(<?=$vl['number']?>,<?=$vl['id']?>);">编辑</a>	&nbsp;&nbsp;|&nbsp;&nbsp;
+				<!--<span onclick="orderBasic(<?=$v['id']?>, 1, 3)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
+				<span class="img-flip" onclick="orderBasic(<?=$v['id']?>, 2, 3)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>-->
+				<span onclick="sortChaneg(<?=$vl['id']?>, 5 , 1,['classId',<?=$id?>])"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
+				<span class="img-flip" onclick="sortChaneg(<?=$vl['id']?>, 5, 2)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>
 			</td>
 		</tr>
 		<?}?>
@@ -61,12 +63,15 @@
 	<br>
 	<div class="thistip" ><em  class="cFF6701" >每条分类最多可添加8条展示商品</em></div>
 	<br>
-	<a href="javascript:void(0)" class="nexta" id="adddata">确定创建</a><a href="javascript:void(0)" class="cancela">取消</a>
+	<a href="javascript:void(0)" class="nexta" id="adddata">确定编辑</a><a href="javascript:void(0)" class="cancela cancel_create">取消</a>
 	</form>
-</div>	
-
+</div>
+<script type="text/javascript" src="<?=StaticDir?>1.2/js/module.js"></script>
 <script type="text/javascript">
     $(function(){
+		<? if(!$id): ?>
+		$('#classname').focus();
+		<? endif; ?>
 		//添加商品界面显示
 		$('#addclassitem').click(function(){
 			if(!$('#newclassitem').is(':visible')){
@@ -75,16 +80,18 @@
 				$('#newclassitem').hide();
 			}
 		})
-		
 		//取消添加
 		$('#cancelaclassitem').click(function(){
-			$('#newclassitem').hide();	
+			$('#newclassitem').hide();
+			$('#sbclassitem').val('');
+			$('#sbnumber').val('');
 		})
 		//添加商标
 		$('#addsb').click(function(){
 			var number = $('#sbnumber').val();
 			if(!number || number == '请输入商标号'){
 				$('#tradetip').html('请输入商标号');
+				$('#tradetip').show();
 				return false;
 			}
 			$('#tradetip').hide();
@@ -94,15 +101,59 @@
 				layer.msg('最多只能添加8条商品', {
 					time: 2000 //2秒关闭（如果不配置，默认是3秒）
 				});
+				return false;
 			}
-			
+			var itemId = $('#sbclassitem').val();
+			if(itemId){
+				var my_data = {number:number,classId:$('#id').val(),opt:'edit','id':itemId};
+			}else{
+				var my_data = {number:number,classId:$('#id').val()};
+			}
 			$.ajax({
 				type : 'post',
-				url  : '/module/gettrade/',
-				data : {number:number},
+				url  : '/module/addClassItem/',
+				data : my_data,
 				dataType : 'json',
 				success : function (data){
-					if (data.code==1){
+					if(data.code==0){
+						//添加结果
+						var str = '<tr id="ClassItem-'+data.id+'" class="ClassItem">';
+						str += '<td class="ClassItemName" >'+data.name+'</td>';
+						str += '<td class="ClassItemNumber" >'+data.number+'</td>';
+						str += '<td><input type="hidden" value="'+data.number+'==='+data.name+'" name="numbers[]" id="item-'+data.id+'" ><a href="javascript:void(0);" onclick="delClassItem('+data.id+')">删除</a>&nbsp;<a href="javascript:void(0);" onclick="editClassItem('+data.number+','+data.id+');">编辑</a>	&nbsp;&nbsp;|&nbsp;&nbsp;';
+						str += '<span onclick="sortChaneg('+data.id+', 5 , 1)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;<span class="img-flip" onclick="sortChaneg('+data.id+', 5, 2)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span></td></tr>';
+						//追加节点
+						$('#classItems').append(str);
+						$('#sbnumber').val('');
+						$('#sbclassitem').val('');
+					}else if(data.code==10) {
+						//编辑结果
+						var hiddenEle = '#item-'+data.id;
+						hiddenEle = $(hiddenEle);
+						hiddenEle.val(data.number+'==='+data.name);
+						hiddenEle.closest('tr').find('.ClassItemName').text(data.name);
+						hiddenEle.closest('tr').find('.ClassItemNumber').text(data.number);
+						$('#sbnumber').val('');
+						$('#sbclassitem').val('');
+						layer.msg('修改成功', {
+							time: 1500
+						});
+					}else{
+						//解析错误,并弹窗提醒
+						var msg = '';
+						switch(data.code){
+							case 1:
+								msg='非法参数';break;
+							case 2:
+								msg='无商标信息';break;
+							case 3:
+								msg='添加数据出错';break;
+						}
+						layer.msg(msg, {
+							time: 2000
+						});
+					}
+					/*if (data.code==1){
 						
 						$('#sbnumber').val('');
 						var itemId = $('#sbclassitem').val();
@@ -125,8 +176,11 @@
 						$('#sbclassitem').val('');
 						
 					}else{
-						$('#tradetip').html('错误。无该商标信息，请验证后输入');
-					}
+						//$('#tradetip').html('错误。无该商标信息，请验证后输入');
+						layer.msg('无该商标信息，请验证后输入', {
+							time: 1500 //1.5秒关闭（如果不配置，默认是3秒）
+						});
+					}*/
 				},
 				error : function (data){
 					layer.msg('操作失败，请稍后重试。', {
@@ -135,7 +189,6 @@
 				}
 			});
 		})
-		
 		//添加分类数据
 		$('#adddata').click(function(){
 			var classname = $('#classname').val();
@@ -172,9 +225,44 @@
 			});
 		})
 		
-		 $(".im-title-span,.cancela,.closed").on("click",function(){
-            parent.layer.closeAll();
-        });
+		$(".im-title-span,.cancela,.closed").on("click",function(){
+			 //parent.layer.closeAll();
+			 parent.window.location.reload();
+		});
+		//分类框失去焦点时ajax请求, 添加分类
+		window.onbeforeunload = function (){
+			$('#classname').off();
+		}
+		$('#classname').blur(function(){
+			var id = $('#id').val();
+			if(id==0){
+				var name = $(this).val();
+				$.ajax({
+					type : 'post',
+					url  : '/module/addClass/',
+					data : {name:name,moduleId:$('.h_modulId').val()},
+					dataType : 'json',
+					success : function (data){
+						if(data.code==0){
+							$('#id').val(data.classId);
+						}else if(data.code==1){
+							layer.msg('非法参数', {
+								time: 1500 //2秒关闭（如果不配置，默认是3秒）
+							});
+						}else if(data.code==2){
+							layer.msg('请输入分类名', {
+								time: 1500 //2秒关闭（如果不配置，默认是3秒）
+							});
+						}
+					},
+					error : function (data){
+						layer.msg('操作失败，请稍后重试。', {
+							time: 2000 //2秒关闭（如果不配置，默认是3秒）
+						});
+					}
+				});
+			}
+		});
 	})
 	
 	//编辑显示框
@@ -190,6 +278,7 @@
 		$('#ClassItem-'+itemId).remove();
 		$('#item-'+itemId).remove();
     }
+
 </script>
 
 <? require(ViewDir.'/footer.html'); ?>
