--- a/App/View/module/module.edit.html
+++ b/App/View/module/module.edit.html
@@ -45,9 +45,10 @@
 				<li>
 					<label>模块标题：</label>
 					<input type="text" name="name" id="modulename" value="<?=$module['name']?>" maxlength="8" />
-					<a href="javascript:void(0);"  class="btn btn-default" onclick="setModule(<?=$module['id']?>)" >确定</a>
 					<p style="margin:20px 0;padding:0 5px 0 5px;background-color:#FFFF99;border:1px solid #dadada;width:260px;">模块标题最多不可超过8个中文字符。</p>
-				
+				</li>
+				<li>
+					<a href="javascript:void(0);"  class="btn btn-default" onclick="setModule(<?=$module['id']?>)" >确定</a>
 				</li>
 			</ul>
 		<div>
@@ -68,8 +69,8 @@
 					<td>
 						<a href="javascript:void(0);" onclick="delClass(<?=$module['id']?>,<?=$vl['id']?>);">删除</a>
 						<a href="javascript:void(0);" onclick="setClass(<?=$module['id']?>,<?=$vl['id']?>);">编辑</a>	&nbsp;&nbsp;|&nbsp;&nbsp;
-						<span onclick="sortChaneg(<?=$vl['id']?>, 4 , 1)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
-						<span class="img-flip" onclick="sortChaneg(<?=$vl['id']?>, 4, 2)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>
+						<span onclick="sortChaneg(<?=$vl['id']?>, 4 , 1,['moduleId',<?=$moduleId?>])"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
+						<span class="img-flip" onclick="sortChaneg(<?=$vl['id']?>, 4, 2,['moduleId',<?=$moduleId?>])"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>
 					</td>
 				</tr>
 				<?}?>
@@ -99,8 +100,8 @@
 					<td>
 						<a href="javascript:void(0);" onclick="delPic(<?=$module['id']?>, <?=$vl['id']?>)">删除</a>
 						<a href="javascript:void(0);" onclick="setPic(<?=$module['id']?>, <?=$vl['id']?>);">编辑</a>	&nbsp;&nbsp;|&nbsp;&nbsp;
-						<span onclick="sortChaneg(<?=$vl['id']?>, 3 , 1)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
-						<span class="img-flip" onclick="sortChaneg(<?=$vl['id']?>, 3, 2)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>
+						<span onclick="sortChaneg(<?=$vl['id']?>, 3 , 1,['moduleId',<?=$moduleId?>])"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
+						<span class="img-flip" onclick="sortChaneg(<?=$vl['id']?>, 3, 2,['moduleId',<?=$moduleId?>])"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>
 					</td>
 				</tr>
 				<?}?>
@@ -132,8 +133,8 @@
 					<td>
 						<a href="javascript:void(0);" onclick="delLink(<?=$module['id']?>, <?=$vl['id']?>);">删除</a>
 						<a href="javascript:void(0);" onclick="setLink(<?=$module['id']?>, <?=$vl['id']?>);">编辑</a>	&nbsp;&nbsp;|&nbsp;&nbsp;
-						<span onclick="sortChaneg(<?=$vl['id']?>, 2 , 1)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
-						<span class="img-flip" onclick="sortChaneg(<?=$vl['id']?>, 2, 2)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>
+						<span onclick="sortChaneg(<?=$vl['id']?>, 2 , 1,['moduleId',<?=$moduleId?>])"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
+						<span class="img-flip" onclick="sortChaneg(<?=$vl['id']?>, 2, 2,['moduleId',<?=$moduleId?>])"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>
 					</td>
 				</tr>
 				<?}?>
