--- a/App/View/module/module.classes.html
+++ b/App/View/module/module.classes.html
@@ -13,7 +13,7 @@
 </style>
 <div class="im-wrap" id="loadForm">
 	<div class="im-title borderBtmCd">
-		<em><span class="im-title-span"><img src="<?=StaticDir?>1.2/images/u30.gif" alt="">关闭</span></em>
+		<em><span class="im-title-span aaaa"><img src="<?=StaticDir?>1.2/images/u30.gif" alt="">关闭</span></em>
 		<h1>子分类管理 </h1>
 	</div>
 	<br>
@@ -45,7 +45,7 @@
 				<!--<span onclick="orderBasic(<?=$v['id']?>, 1, 3)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
 				<span class="img-flip" onclick="orderBasic(<?=$v['id']?>, 2, 3)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>-->
 				<span onclick="sortChaneg(<?=$vl['id']?>, 5 , 1,['classId',<?=$id?>])"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
-				<span class="img-flip" onclick="sortChaneg(<?=$vl['id']?>, 5, 2)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>
+				<span class="img-flip" onclick="sortChaneg(<?=$vl['id']?>, 5, 2,['classId',<?=$id?>])"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>
 			</td>
 		</tr>
 		<?}?>
@@ -63,7 +63,7 @@
 	<br>
 	<div class="thistip" ><em  class="cFF6701" >每条分类最多可添加8条展示商品</em></div>
 	<br>
-	<a href="javascript:void(0)" class="nexta" id="adddata">确定编辑</a><a href="javascript:void(0)" class="cancela cancel_create">取消</a>
+	<a href="javascript:void(0)" class="nexta" id="adddata aaaa">确定编辑</a><a href="javascript:void(0)" class="cancela cancel_create">取消</a>
 	</form>
 </div>
 <script type="text/javascript" src="<?=StaticDir?>1.2/js/module.js"></script>
@@ -95,7 +95,7 @@
 				return false;
 			}
 			$('#tradetip').hide();
-			
+
 			var ClassItemNum = $('.ClassItem').length;
 			if(ClassItemNum >= 8){
 				layer.msg('最多只能添加8条商品', {
@@ -121,7 +121,7 @@
 						str += '<td class="ClassItemName" >'+data.name+'</td>';
 						str += '<td class="ClassItemNumber" >'+data.number+'</td>';
 						str += '<td><input type="hidden" value="'+data.number+'==='+data.name+'" name="numbers[]" id="item-'+data.id+'" ><a href="javascript:void(0);" onclick="delClassItem('+data.id+')">删除</a>&nbsp;<a href="javascript:void(0);" onclick="editClassItem('+data.number+','+data.id+');">编辑</a>	&nbsp;&nbsp;|&nbsp;&nbsp;';
-						str += '<span onclick="sortChaneg('+data.id+', 5 , 1)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;<span class="img-flip" onclick="sortChaneg('+data.id+', 5, 2)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span></td></tr>';
+						str += '<span onclick="sortChaneg('+data.id+', 5 , 1,[\'classId\',<?=$id?>])"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;<span class="img-flip" onclick="sortChaneg('+data.id+', 5, 2,[\'classId\',<?=$id?>])"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span></td></tr>';
 						//追加节点
 						$('#classItems').append(str);
 						$('#sbnumber').val('');
@@ -153,34 +153,6 @@
 							time: 2000
 						});
 					}
-					/*if (data.code==1){
-						
-						$('#sbnumber').val('');
-						var itemId = $('#sbclassitem').val();
-						if(itemId !== ''){
-							$('#ClassItem-'+itemId).find('.ClassItemName').html(data.name);
-							$('#ClassItem-'+itemId).find('.ClassItemNumber').html(number);
-							$('#item-'+itemId).val(number+"==="+data.name);
-						}else{
-							if((ClassItemNum+1) >= 8){
-								$('#addclassitem').hide();
-							}
-							var str="<tr><td class=\"ClassItemName\" >"+data.name+"</td><td class=\"ClassItemNumber\" >"+number+"</td><td>";
-							str += "<a href=\"javascript:void(0);\" onclick=\"delPic("+ClassItemNum+")\">删除</a><a href=\"javascript:void(0);\" onclick=\"setPic();\">编辑</a>	&nbsp;&nbsp;|&nbsp;&nbsp;";
-							str += "<a href=\"javascript:void(0);\" onclick=\"delPic("+data.id+")\">删除</a><a href=\"javascript:void(0);\" onclick=\"setPic();\">编辑</a> |";
-							str += "</td></tr>";
-							$('#classItems').append(str);
-							var inputs = "<input type='hidden' value='"+number+"==="+data.name+"' name='numbers[]' id='item-"+ClassItemNum+"' >";
-							$('#moduleclass').append(inputs);
-						}
-						$('#sbclassitem').val('');
-						
-					}else{
-						//$('#tradetip').html('错误。无该商标信息，请验证后输入');
-						layer.msg('无该商标信息，请验证后输入', {
-							time: 1500 //1.5秒关闭（如果不配置，默认是3秒）
-						});
-					}*/
 				},
 				error : function (data){
 					layer.msg('操作失败，请稍后重试。', {
@@ -224,54 +196,64 @@
 				}
 			});
 		})
-		
+        //取消/添加 失去焦点事件
+		$(".aaaa").mouseenter(function(){
+			$('#classname').unbind('blur');
+		});
+		$(".aaaa").mouseout(function(){
+			$('#classname').bind('blur',classNameFn);
+		});
 		$(".im-title-span,.cancela,.closed").on("click",function(){
 			 //parent.layer.closeAll();
 			 parent.window.location.reload();
 		});
 		//分类框失去焦点时ajax请求, 添加分类
-		window.onbeforeunload = function (){
-			$('#classname').off();
-		}
-		$('#classname').blur(function(){
-			var id = $('#id').val();
-			if(id==0){
-				var name = $(this).val();
-				$.ajax({
-					type : 'post',
-					url  : '/module/addClass/',
-					data : {name:name,moduleId:$('.h_modulId').val()},
-					dataType : 'json',
-					success : function (data){
-						if(data.code==0){
-							$('#id').val(data.classId);
-						}else if(data.code==1){
-							layer.msg('非法参数', {
-								time: 1500 //2秒关闭（如果不配置，默认是3秒）
-							});
-						}else if(data.code==2){
-							layer.msg('请输入分类名', {
-								time: 1500 //2秒关闭（如果不配置，默认是3秒）
-							});
-						}
-					},
-					error : function (data){
-						layer.msg('操作失败，请稍后重试。', {
-							time: 2000 //2秒关闭（如果不配置，默认是3秒）
-						});
-					}
-				});
-			}
-		});
-	})
-	
+		$('#classname').blur(classNameFn);
+	});
+    //添加分类函数
+	function classNameFn(){
+        var id = $('#id').val();
+        if(id==0){
+            var name = $(this).val();
+            if(name==''){
+                layer.msg('请输入分类名', {
+                    time: 1500 //2秒关闭（如果不配置，默认是3秒）
+                });
+                return;
+            }
+            $.ajax({
+                type : 'post',
+                url  : '/module/addClass/',
+                data : {name:name,moduleId:$('.h_modulId').val()},
+                dataType : 'json',
+                success : function (data){
+                    if(data.code==0){
+                        $('#id').val(data.classId);
+                    }else if(data.code==1){
+                        layer.msg('非法参数', {
+                            time: 1500 //2秒关闭（如果不配置，默认是3秒）
+                        });
+                    }else if(data.code==2){
+                        layer.msg('请输入分类名', {
+                            time: 1500 //2秒关闭（如果不配置，默认是3秒）
+                        });
+                    }
+                },
+                error : function (data){
+                    layer.msg('操作失败，请稍后重试。', {
+                        time: 2000 //2秒关闭（如果不配置，默认是3秒）
+                    });
+                }
+            });
+        }
+	}
 	//编辑显示框
 	function editClassItem(number,itemId){
 		$('#sbclassitem').val(itemId);
 		$('#sbnumber').val(number);
 		$('#newclassitem').show();
 	}
-	
+
 	//删除
 	function delClassItem(itemId)
     {
