--- a/App/View/module/module.pic.html
+++ b/App/View/module/module.pic.html
@@ -32,6 +32,7 @@
 		</li>
 	</ul>
 	<a href="javascript:void(0)" class="nexta" id="nextpt">确定创建</a><a href="javascript:void(0)" class="cancela">取消</a>
+	<!--<input type="submit" class="nexta" id="nextpt" value="确定创建" style="border: none"/><input type="button" class="cancela" value="取消" style="border: none">-->
 	</form>
 </div>	
 
@@ -50,11 +51,19 @@
                         $('#pic').val(data.img);
                         $('#showpic').attr('src', data.img);
                     }else{
-                        alert(data.msg);
+                        layer.msg(data.msg, {
+                            time: 1500
+                        });
+                        //重置表单
+                        $("#tjformupload")[0].reset();
                     }
                 },
                 error:function(xhr){
-                    alert('图片格式不正确或图片过大，请重新上传！');
+                    layer.msg('图片格式不正确或图片过大，请重新上传!', {
+                        time: 1500
+                    });
+                    //重置表单
+                    $("#tjformupload")[0].reset();
                 }
             });
         });
@@ -65,6 +74,7 @@
 	
 	$('#nextpt').click(function(){
 		opContact();
+        return false;
 	})
 	
 	function opContact()
