--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -49,7 +49,7 @@
                     <td>商标状态：<?=$tminfo['status']?></td>
                 </tr>
                 <tr>
-                    <td>区    域：国内</td>
+                    <td>注册日期：<?=$sale['regDate']>0?date('Y-m-d',$sale['regDate']):'0000-00-00'?></td>
                     <td>有效期至：<?=$tminfo['valid_end']?></td>
                     <td colspan="2">类别：<?=$sale['class']?>类</td>
                 </tr>
