git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7948 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/topic/topic.edit.html
+++ b/App/View/topic/topic.edit.html
@@ -16,7 +16,8 @@
 <div class="wrap">
 	
     <div class="wrap-top">
-        <h4>专题设置 》 创建专题</h4><span></span>
+        <h4>专题设置 >></h4><br/>
+        <h4>  创建专题</h4><span></span>
     </div>
 	<div class="mj-ztBar f-clearfix">
         <span class="mj-ztBr">
@@ -117,8 +118,6 @@
 			<?if($ky < 8){ ?>
 			<a href="javascript:void(0)" class="nexta" id="additems">+ 新增商品</a>
 			<?php } ?>
-			<br>
-			<div class="thistip" ><em  class="cFF6701" >每条分类最多可添加8条展示商品</em></div>
 			<br>
 		</div>
 		
