修复模块和主题部分bug
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7960 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/module/module.classes.html
+++ b/App/View/module/module.classes.html
@@ -155,6 +155,8 @@
 								msg='无商标信息';break;
 							case 3:
 								msg='添加数据出错';break;
+							case 5:
+								msg='商标审核中或已下架,请修改状态';break;
 						}
 						layer.msg(msg, {
 							time: 2000
