--- a/App/View/module/module.classes.html
+++ b/App/View/module/module.classes.html
@@ -42,8 +42,6 @@
 				<input type='hidden' value='<?=$vl['number']?>===<?=$vl['name']?>' name='numbers[]' id="item-<?=$vl['id']?>" >
 				<a href="javascript:void(0);" onclick="delClassItem(<?=$vl['id']?>)">删除</a>
 				<a href="javascript:void(0);" onclick="editClassItem(<?=$vl['number']?>,<?=$vl['id']?>);">编辑</a>	&nbsp;&nbsp;|&nbsp;&nbsp;
-				<!--<span onclick="orderBasic(<?=$v['id']?>, 1, 3)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
-				<span class="img-flip" onclick="orderBasic(<?=$v['id']?>, 2, 3)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>-->
 				<span onclick="sortChaneg(<?=$vl['id']?>, 5 , 1,['classId',<?=$id?>])"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
 				<span class="img-flip" onclick="sortChaneg(<?=$vl['id']?>, 5, 2,['classId',<?=$id?>])"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>
 			</td>
@@ -53,7 +51,7 @@
 	<table class="importable">
 		<tr id="newclassitem" style="display:none;">
 			<input type="hidden" id="sbclassitem" />
-			<td><input type="text" id="sbnumber" maxlength="20"  class="inputbig" placeholder="请输入商标号" /></td>
+			<td><input type="text" id="sbnumber" maxlength="20"  class="inputbig" placeholder="请输入商标号" isedit=""/></td>
 			<td><em id="tradetip"></em></td>
 			<td><a href="javascript:void(0)" class="nextanext" id="addsb">确定</a><a href="javascript:void(0)" class="cancelanext" id="cancelaclassitem">取消</a></td>
 		</tr>
@@ -85,10 +83,15 @@
 			$('#newclassitem').hide();
 			$('#sbclassitem').val('');
 			$('#sbnumber').val('');
+			$('#sbnumber').attr('isedit','');
 		})
 		//添加商标
 		$('#addsb').click(function(){
 			var number = $('#sbnumber').val();
+			//判断是否是编辑商标
+			var isEdit = $('#sbnumber').attr('isedit');
+			$('#sbnumber').attr('isedit','');
+
 			if(!number || number == '请输入商标号'){
 				$('#tradetip').html('请输入商标号');
 				$('#tradetip').show();
@@ -97,7 +100,8 @@
 			$('#tradetip').hide();
 
 			var ClassItemNum = $('.ClassItem').length;
-			if(ClassItemNum >= 8){
+			//添加且大于8才提示
+			if(ClassItemNum >= 8 && isEdit!='true'){
 				layer.msg('最多只能添加8条商品', {
 					time: 2000 //2秒关闭（如果不配置，默认是3秒）
 				});
@@ -145,6 +149,7 @@
 						layer.msg('修改成功', {
 							time: 1500
 						});
+						$('#newclassitem').hide();
 					}else{
 						//解析错误,并弹窗提醒
 						var msg = '';
@@ -270,6 +275,7 @@
 	function editClassItem(number,itemId){
 		$('#sbclassitem').val(itemId);
 		$('#sbnumber').val(number);
+		$('#sbnumber').attr('isedit','true');
 		$('#newclassitem').show();
 	}
 
