git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@8002 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/industry/industry.ztype.html
+++ b/App/View/industry/industry.ztype.html
@@ -14,6 +14,8 @@
             <input type="hidden" name="industryId"  value="<?=$industryId?>" />
             <label>分类名称：</label>
             <input type="text" id="ztypeName" name="ztypeName" value="<?=$cinfo['name']?>"/>
+            <label>分类链接：</label>
+            <input type="text" id="ztypeLink" name="ztypeLink" value="<?=$cinfo['link']?>"/>
             <div class="mj-sellT">
                 <table id="newTable">
                     <thead>
