--- a/App/View/channel/channel.ad.html
+++ b/App/View/channel/channel.ad.html
@@ -25,11 +25,12 @@
     广告图片建议尺寸为 ( xxx ) x ( xxx )，文件最大不超过500kb，当前支持jpg,bmp,png格式文件
     </div>
     <label>图片链接：</label>
-    <input type="input" class="form-control" name="link" value="<?=$info['link']?>">
-
+    <input type="input" class="form-control" maxlength="150" name="link" value="<?=$info['link']?>">
     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
     请输入该广告链接，未输入链接则该图片不可点击。
     </div>
+    <label>描述：</label>
+    <textarea class="form-control" name="desc" maxlength="150" style="width:99%;height:80px;"><?=$info['desc']?></textarea>
 
     <div style="bottom:15px;position: fixed;">
         <button type="button" id="myButton" class="btn btn-warning">&nbsp;&nbsp;&nbsp;&nbsp;确定&nbsp;&nbsp;&nbsp;&nbsp;</button>
