--- a/App/View/channel/channel.index.html
+++ b/App/View/channel/channel.index.html
@@ -90,8 +90,9 @@
             <thead>
                 <tr class="active">
                     <th width="25%">广告图</th>
-                    <th width="40%">链接</th>
-                    <th width="25%">操作</th>
+                    <th width="30%">链接</th>
+                    <th width="25%">描述</th>
+                    <th width="20%">操作</th>
                 </tr>
             </thead>
             <tbody class="table-list">
@@ -100,6 +101,7 @@
                     <td align="center" style="vertical-align:middle">
                     <img class="info-pic" src="<?=$v['pic']?>" /></td>
                     <td style="vertical-align:middle"><?=empty($v['link'])?'无':$v['link']?></td>
+                    <td style="vertical-align:middle"><?=empty($v['desc'])?'-':$v['desc']?></td>
                     <td style="vertical-align:middle">
                         <span class="icon icon-delete">
                             <a href="javascript:;" onclick="cancel(<?=$v['id']?>)"  class="btn-warning">删除</a>
@@ -240,7 +242,7 @@
                 type: 2,
                 scrollbar: false,
                 title: '创建广告图',
-                area: ['650px', '400px'],
+                area: ['650px', '450px'],
 
                 content: '/channel/addAd/?id='+id
             });
@@ -296,7 +298,7 @@
             type: 2,
             scrollbar: false,
             title: '修改广告图',
-            area: ['600px', '430px'],
+            area: ['650px', '480px'],
 
             content: '/channel/editAd/?id='+id
         });
