--- a/App/View/module/module.classes.html
+++ b/App/View/module/module.classes.html
@@ -60,7 +60,7 @@
 	<span class="addSpan"><a href="javascript:void(0)" class="nexta" id="addclassitem">+ 新增商品</a><br></span>
 	<div class="thistip" ><em  class="cFF6701" >每条分类最多可添加8条展示商品</em></div>
 	<br>
-	<a href="javascript:void(0)" class="nexta aaaa" id="adddata">确定编辑</a><a href="javascript:void(0)" class="cancela cancel_create  aaaa">取消</a>
+	<a href="javascript:void(0)" class="nexta aaaa" id="adddata">确定删除</a><a href="javascript:void(0)" class="cancela cancel_create  aaaa">取消</a>
 	</form>
 </div>
 <script type="text/javascript" src="<?=StaticDir?>1.2/js/module.js"></script>
