修改添加商标分类的商品过多时，前面的商标分类会遮挡住活动标题栏
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@8220 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/module/module.classes.html
+++ b/App/View/module/module.classes.html
@@ -77,6 +77,9 @@
 			}else{
 				$('#newclassitem').hide();
 			}
+                        $('#sbclassitem').val("");
+                        $('#sbnumber').val("");
+                        $("#newclassitem").insertAfter($("#classItems").last());//移动到最后面
 		})
 		//取消添加
 		$('#cancelaclassitem').click(function(){
@@ -278,6 +281,8 @@
 		$('#sbnumber').val(number);
 		$('#sbnumber').attr('isedit','true');
 		$('#newclassitem').show();
+                //移动到当前tr后面
+                $("#newclassitem").insertAfter($("#ClassItem-"+itemId).last());
 	}
 
 	//删除
