修改连接颜色相关
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@8330 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/module/module.edit.html
+++ b/App/View/module/module.edit.html
@@ -145,7 +145,7 @@
 						}
 						?></a>
 					</td>
-					<td><?if($vl['show'] == 0){echo "普通";}elseif($vl['show'] == 1){echo "红";}elseif($vl['show'] == 2){echo "蓝";}elseif($vl['show'] == 3){echo "黄";}?></td>
+					<td><?if($vl['show'] == 0){echo "普通";}elseif($vl['show'] == 1){echo "红";}elseif($vl['show'] == 2){echo "蓝";}elseif($vl['show'] == 3){echo "橘";}?></td>
 					<td>
 						<a href="javascript:void(0);" onclick="delLink(<?=$module['id']?>, <?=$vl['id']?>);">删除</a>
 						<a href="javascript:void(0);" onclick="setLink(<?=$module['id']?>, <?=$vl['id']?>);">编辑</a>	&nbsp;&nbsp;|&nbsp;&nbsp;
