--- a/App/View/module/module.link.html
+++ b/App/View/module/module.link.html
@@ -30,7 +30,7 @@
             <option value='0' <?if($link['show'] == 0){echo "selected";}?>>普通</option>
             <option value='1' <?if($link['show'] == 1){echo "selected";}?>>红色</option>
             <option value='2' <?if($link['show'] == 2){echo "selected";}?>>蓝色</option>
-            <option value='3' <?if($link['show'] == 3){echo "selected";}?>>黄色</option>
+            <option value='3' <?if($link['show'] == 3){echo "selected";}?>>橘色</option>
         </select>
     </div>
 
