--- a/App/View/basic/basic.index.html
+++ b/App/View/basic/basic.index.html
@@ -163,7 +163,7 @@
             <? foreach ($list[3] as $k => $v) { ?>
                 <tr>
                     <td align="center" style="vertical-align:middle">
-                    <img class="info-pic" src="<?=$v['pic']?$v['pic']:'error'?>" onerror="this.src='/Static/1.2/images/u143.png'" /></td>
+                    <img class="info-pic" src="<?=empty($v['pic'])?'error':$v['pic']?>" onerror="this.src='/Static/1.2/images/u143.png'" /></td>
                     <td style="vertical-align:middle"><?=empty($v['link'])?'无':$v['link']?></td>
                     <td style="vertical-align:middle">
                         <span class="icon icon-delete">
