--- a/App/View/topic/topic.index.html
+++ b/App/View/topic/topic.index.html
@@ -33,6 +33,7 @@
                         <th>专题标题</th>
                         <th>发布时间</th>
                         <th>创建者</th>
+                        <th>专题类型</th>
 						<th>包含商品</th>
                         <th>操作</th>
                     </tr>
@@ -44,6 +45,7 @@
                     <td><?=$v['title']?></td>
 					<td><?=date('Y-m-d', $v['date'])?></td>
 					<td><?=$v['member']?></td>
+                    <td><?=$v['type']==1?'普通专题':'静态链接专题'?></td>
 					<td><?=$v['classNum']?></td>
                     <td>
 						<a href="javascript:void(0);" onclick="delTopic(<?=$v['id']?>);">删除</a>
