完善成功案例时间
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@8521 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/case/case.edit.html
+++ b/App/View/case/case.edit.html
@@ -49,7 +49,7 @@
                     </li>
                     <li>
                         <label>案例成功日期：</label>
-                        <input type="text" name="date" value="<?=$case['date']?>" class="input input-sm" readonly onclick="laydate()" />
+                        <input type="text" name="date" value="<?=date('Y-m-d',$case['date'])?>" class="input input-sm" readonly onclick="laydate()" />
                     </li>
                     <li>
                         <label>成交描述：</label>
@@ -161,4 +161,3 @@
         }
     </script>
     <? require(ViewDir.'/footer.html'); ?>
-
