图片bug--成功案例
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@8523 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/case/case.edit.html
+++ b/App/View/case/case.edit.html
@@ -23,8 +23,8 @@
         </span>
         <form id="case">
             <input type="hidden" name="id" id="topicId" value="<?=$case['id']?>">
-            <input type="hidden" name="pic1" id="pic1" value="<?=$topic['pic1']?>">
-            <input type="hidden" name="pic2" id="pic2" value="<?=$topic['pic2']?>">
+            <input type="hidden" name="pic1" id="pic1" value="<?=$case['pic1']?>">
+            <input type="hidden" name="pic2" id="pic2" value="<?=$case['pic2']?>">
             <div>
                 <ul>
                     <li>
