--- a/App/View/case/case.edit.html
+++ b/App/View/case/case.edit.html
@@ -29,15 +29,7 @@
                 <ul>
                     <li>
                         <label>成功案例标题：</label>
-                        <input type="text" name="title" id="title" value="<?=$case['title']?>"/>
-                    </li>
-                    <li>
-                        <label>出售商标名字与类型：</label>
-                        <input type="text" name="name" value="<?=$case['name']?>"/>
-                    </li>
-                    <li>
-                        <label>适用服务(包含商品)：</label>
-                        <input type="text" name="goods" value="<?=$case['goods']?>"/>
+                        <input type="text" name="title" id="title" value="<?=$case['title']?>" size="80"/>
                     </li>
                     <li>
                         <label>服务顾问：</label>
@@ -50,10 +42,18 @@
                     <li>
                         <label>案例成功日期：</label>
                         <input type="text" name="date" value="<?=date('Y-m-d',$case['date'])?>" class="input input-sm" readonly onclick="laydate()" />
+                    </li><br>
+                    <li>
+                        <label>出售商标名字与类型：</label>
+                        <textarea name="name" cols="40" rows="3"><?=$case['name']?></textarea>
+                    </li>
+                    <li>
+                        <label>适用服务(包含商品)：</label>
+                        <textarea name="goods" cols="60" rows="5"><?=$case['goods']?></textarea>
                     </li>
                     <li>
                         <label>成交描述：</label>
-                        <input type="text" name="desc" value="<?=$case['desc']?>"/>
+                        <textarea name="desc" cols="80" rows="6"><?=$case['desc']?></textarea>
                     </li>
                     <li><br>
                         <hr>
