--- a/App/View/case/case.index.html
+++ b/App/View/case/case.index.html
@@ -58,6 +58,7 @@
         <div class="btn-group">
             <button class="btn btn-danger add-case" type="button">添加一个成功案例</button>
         </div>
+        <div id="page" align="center"><?=$pageBar?></div>
     </div>
 </div>
 <script src="<?=StaticDir?>1.2/js/bootstrap.min.js"></script>
