--- a/App/View/topic/topic.index.html
+++ b/App/View/topic/topic.index.html
@@ -62,7 +62,7 @@
 		<div class="btn-group">
             <button class="btn btn-danger add-topic" type="button">+ 创建一个模块</button>
         </div>
-		
+        <div id="page" align="center"><?=$pageBar?></div>
     </div>
 </div>
 <script src="<?=StaticDir?>1.2/js/bootstrap.min.js"></script>
