取消专题页名称长度限制
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@8577 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/topic/topic.edit.html
+++ b/App/View/topic/topic.edit.html
@@ -34,8 +34,8 @@
 				</li>
 				<li>
 					<label>专题标题：</label>
-					<input type="text" name="title" id="title" value="<?=$topic['title']?>" maxlength="8" />
-					<p style="margin:20px 0;padding:0 5px 0 5px;background-color:#FFFF99;border:1px solid #dadada;width:260px;">模块标题最多不可超过8个中文字符。</p>
+					<input type="text" name="title" id="title" value="<?=$topic['title']?>"/>
+					<!--<p style="margin:20px 0;padding:0 5px 0 5px;background-color:#FFFF99;border:1px solid #dadada;width:260px;">模块标题最多不可超过8个中文字符。</p>-->
 				</li>
 				<li>
 					<label>专题图片：</label>
