登录错误提示. 后台kingedit图片设置
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@8760 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -5,6 +5,7 @@
 <script>
         KindEditor.ready(function(K) {
             window.editor = K.create('#intro', {
+                urlType:'domain',
                 afterBlur: function () { this.sync(); }
             });
         });
