提交列表排序功能代码
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9087 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -225,6 +225,15 @@
                         <option value="<?=$k?>" <?if($sale['isTop']==$k){echo 'selected';}?>>
                         <?=$v?></option>
                     <? } ?>
+                    </select>                    
+                </div>
+                <div class="mj-checkbox">
+                    <label for="bq9">列表排序(前台客户订制)：</label>
+                    <select name="listSort">
+                    <? foreach (range(0, 9) as $v) { ?>
+                        <option value="<?=$v?>" <?if($sale['listSort']==$v){echo 'selected';}?>>
+                        <?=$v?>-排序值</option>
+                    <? } ?>
                     </select>
                     
                 </div>
