--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -123,6 +123,10 @@
                     <input type="checkbox" name="isTop" <?if($s['isTop']==1){echo 'checked';}?> value="1" id="bq9"/>
                     <label for="bq9">置项</label>
                 </div>
+                <div class="mj-checkbox">
+                    <input type="checkbox" name="listSort" <?if($s['listSort']==1){echo 'checked';}?> value="1" id="bq9"/>
+                    <label for="bq9">列表(排序)</label>
+                </div>
 
                 <label>编号(tid)：</label>
                 <div class="mj-radio">
